--- a/start.html
+++ b/start.html
@@ -9,5 +9,6 @@
   <body>
     <h2>this is third repo</h2>
     <h3>This is not Acutlly prefareable</h3>
+    <img src="lamp.png" alt="" />
   </body>
 </html>
